# morphapi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: build_and_publish.yml  run-tests.yml  test_and_deploy.yml
examples/: allen_morphology_api.py  mouselight_api.py  visualise_swc.py
examples/download/: allen_morphology_api.py  mouselight_api.py  mpin_api.py  neuromorpho_api.py
examples/example_files/: example1.swc  example2.swc  example3.swc  example4.swc
examples/visualise/: visualise_swc.py
morphapi/: __init__.py  paths_manager.py
morphapi/api/: allenmorphology.py  mouselight.py  mpin_celldb.py  neuromorphorg.py
morphapi/morphology/: cache.py  morphology.py
morphapi/utils/: data_io.py  webqueries.py
tests/: test_download.py  test_neuron.py
tests/data/: example2.swc  example3.swc
