[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
    "wheel",
]

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39']
skip-string-normalization = false
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
